# JavaCAN

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MIT-header.txt  README.md  TROUBLESHOOTING.md  build.gradle.kts  common.cmake  compile-native.sh  gradle.properties  pom.xml  renovate.json5  settings.gradle.kts  setup-vcan.sh
.github/: FUNDING.yml
.run/: Build Fast.run.xml  Clean Build Fast.run.xml  Clean Install All Archs.run.xml  Install Fast.run.xml  Install.run.xml  (+2 more)
cmake/: CMakeLists.txt
core/: CMakeLists.txt  build.gradle.kts  pom.xml
core/src/main/c/: common.c  common.h  javacan_bcm.c  javacan_bcmmessage.c  javacan_epoll.c  javacan_isotp.c  javacan_j1939.c  javacan_networkdevice.c  javacan_raw.c  javacan_socketcan.c
core/src/main/java/: module-info.java
core/src/main/java/tel/schich/javacan/: AbstractCanChannel.java  BcmCanChannel.java  BcmFlag.java  BcmMessage.java  BcmOpcode.java  CanChannels.java  CanFilter.java  CanFrame.java  CanSocketOptions.java  ImmutableJ1939Address.java  ImmutableJ1939ReceiveMessageHeader.java  ImmutableRawReceiveMessageHeader.java  IsotpAddress.java  IsotpCanChannel.java  IsotpCanChannelImpl.java  IsotpCanSocketOptions.java  IsotpFlowControlOptions.java  IsotpLinkLayerOptions.java  IsotpOptions.java  IsotpSocketAddress.java  J1939Address.java  J1939AddressBuffer.java  J1939CanChannel.java  J1939CanChannelImpl.java  J1939CanSocketOptions.java  J1939Filter.java  J1939ReceiveMessageHeader.java  J1939ReceiveMessageHeaderBuffer.java  J1939ReceivedMessageHeader.java  J1939Utils.java  JavaCAN.java  NetworkDevice.java  RawCanChannel.java  RawCanChannelImpl.java  RawCanSocketOptions.java  RawReceiveMessageHeader.java  RawReceiveMessageHeaderBuffer.java  ReceiveMessageHeader.java  SocketCAN.java
core/src/main/java/tel/schich/javacan/linux/: LinuxNativeOperationException.java  LinuxNetworkDevice.java  LinuxSocketOptionHandler.java  UnixFileDescriptor.java
core/src/main/java/tel/schich/javacan/linux/epoll/: EPoll.java  EPollRegistration.java
core/src/main/java/tel/schich/javacan/option/: CanSocketOption.java  package-info.java
core/src/main/java/tel/schich/javacan/platform/: NativeChannel.java  Platform.java  UnsupportedPlatformException.java  package-info.java
core/src/main/java/tel/schich/javacan/platform/linux/: LinuxNativeOperationException.java  LinuxNetworkDevice.java  LinuxSocketOptionHandler.java  UnixFileDescriptor.java  package-info.java
core/src/main/java/tel/schich/javacan/tools/: CanDumpConverter.java  package-info.java
core/src/main/java/tel/schich/javacan/util/: BufferHelper.java  CanUtils.java  EvictingQueue.java  MessageHandler.java  PollingThread.java  package-info.java
core/src/test/java/tel/schich/javacan/: TestHelper.java
core/src/test/java/tel/schich/javacan/test/: BcmCanSocketTest.java  CanTestHelper.java  J1939CanSocketTest.java  RawCanSocketTest.java
core/src/test/java/tel/schich/javacan/test/isotp/: IsotpCanSocketOptionsTest.java
core/src/test/java/tel/schich/javacan/test/linux/: LinuxNativeOperationExceptionTest.java
core/src/test/java/tel/schich/javacan/test/util/: CanBrokerTest.java  CanUtils.java  IsotpListenerTest.java
core/src/testFixtures/java/tel/schich/javacan/: TestHelper.java
(+271 files in other folders)
